--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">sample</string>
 
     <string name="action_run_animation">Run animation</string>
+    <string name="title_activity_vector_test">VectorTestActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 </resources>
