--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -7,6 +7,27 @@
     <string name="action_settings">Settings</string>
 
     <!-- paths -->
-    <string name="circle_data">M 125 250 C 137.5 83.34 362.5 83.34 375 250 M 125 250 C 137.5 416.66 362.5 416.66 375 250</string>
-    <string name="line_data">M 50 250 C 125 250 125 250 250 250 M 250 250 C 375 250 375 250 450 250</string>
+    <string name="circle_data">M 125 250
+                               C 137.5 83.34 362.5 83.34 375 250
+                               M 125 250
+                               C 137.5 416.66 362.5 416.66 375 250</string>
+    <string name="line_data">M 50 250
+                             C 125 250 125 250 250 250
+                             M 250 250
+                             C 375 250 375 250 450 250</string>
+    <string name="arrow_data">M 225 200
+                              L 275 200
+                              Q 280 200 280 205
+                              L 280 270
+                              Q 280 275 285 275
+                              L 300 275
+                              Q 310 275 305 280
+                              L 255 320
+                              Q 250 325 245 320
+                              L 195 280
+                              Q 190 275 200 275
+                              L 215 275
+                              Q 220 275 220 270
+                              L 220 205
+                              Q 220 200 225 200</string>
 </resources>
