--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">sample</string>
 
-    <string name="action_run_animation">Run animation</string>
-    <string name="title_activity_vector_test">VectorTestActivity</string>
+    <string name="action_run_success_animation">Run success animation</string>
+    <string name="action_run_fail_animation">Run fail animation</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_vector_test">VectorTestActivity</string>
 </resources>
